fix: overflow

--- a/src/app/posts/[...slug]/styles/md.css
+++ b/src/app/posts/[...slug]/styles/md.css
@@ -15,8 +15,11 @@
     line-height: 28px;
   }
 
-  &>div {
+  &>* {
     overflow-x: hidden;
+  }
+
+  &>div {
     margin: 16px 0;
   }
 
